Bug 404494 - Falkon start new process when it should open new tab running window
Summary: Falkon start new process when it should open new tab running window
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-17 20:50 UTC by Juraj
Modified: 2019-02-19 10:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juraj 2019-02-17 20:50:37 UTC
SUMMARY
Hello,
after some time running Falkon start to behave little strange.
When the falkon is called from other programs or from file manager
it opens the desired url or file in new falkon process with windows and tab from current session.

STEPS TO REPRODUCE
1. Run Falkon and wait until it does what is destribed
  - I do not know exact steps, this happens for few months or all the time I am using Falkon, it takes time to appear
2. Open link from other application (I use terminator, thunar and kmail)

OBSERVED RESULT
Falkon opens current session in new process with all tabs and windows and adds new tab with desired url or file.

EXPECTED RESULT
Falkon open new tab in curretly running instance.

SOFTWARE/OS VERSIONS
Application version 3.0.99 (29486c2f)
Operating System: Artix 
KDE Plasma Version: 5.15.0
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1
Kernel Version: 4.19.23-1-lts
OS Type: 64-bit


ADDITIONAL INFORMATION
The lockfile in /tmp still exist: "/tmp/qtsingleapp-falkon-1ee2-3e8-lockfile"

I am sorry but I truly do not know how to trigger this behaviour.
It happens randomly and without warning, only way to fix it is to close and open Falkon again.
I am using laptop and falkon is running in span of several days with it.
Comment 1 Juraj 2019-02-19 01:25:59 UTC
It looks like falkon creates another lockfile.
When I start falkon it creates "qtsingleapp-Falkon-25de-3e8-lockfile" and socket file with same name.

But today also appeared another lockfile callked "qtsingleapp-falkon-1ee2-3e8-lockfile".

When this bug appears it looks like the original files are removed for some reason.

I can only say that I don not run any script to delete things from /tmp.
/tmp it mounted as tmpfs and is big enough to hold few blank files.

In my usage of Falkon I start it once open one or more windows and then call it from other applications to open links in running instance.
Comment 2 David Rosca 2019-02-19 10:13:31 UTC
Git commit 102bd219b7520fc4bcb0b41bcf9ed692686836d6 by David Rosca.
Committed on 19/02/2019 at 10:13.
Pushed by drosca into branch 'master'.

QtSingleApplication: Add DBus backend for Linux

It should be more reliable than lockfile.
FIXED-IN: 3.1.0

M  +65   -0    src/lib/3rdparty/qtsingleapplication/qtlocalpeer.cpp
M  +1    -0    src/lib/3rdparty/qtsingleapplication/qtlocalpeer.h
M  +4    -4    src/lib/app/mainapplication.cpp

https://commits.kde.org/falkon/102bd219b7520fc4bcb0b41bcf9ed692686836d6