QtSingleApplication: Add DBus backend for Linux

It should be more reliable than lockfile.

BUG: 404494
FIXED-IN: 3.1.0